--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -341,6 +341,7 @@ footer {
       flex-direction: row;
       left: unset;
       right: unset;
+      transform: unset;
       button{
         margin-right: 10px;
         margin-top: 80px;
