--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,6 +16,10 @@ a {
 }
 
 
+nav{
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.05);
+}
+
 
 /*-- footer --*/
 
@@ -346,5 +350,28 @@ footer {
         margin-right: 10px;
         margin-top: 80px;
       }
+    }
+  }
+
+
+  .herosection{
+    background-color: #f4f4f4;
+    padding: 100px 0;
+    margin-bottom: 100px;
+  }
+
+  .category-main{
+    background-color: #f4f4f4;
+    padding: 50px 0;
+    margin-bottom: 50px;
+    .category-items{
+      background-color: white;
+      cursor: pointer;
+      box-shadow: rgba(1, 1, 1, 0.05) 1px 1px 5px 0px;
+      display: flex;
+      gap: 10px;
+      padding: 10px 15px;
+      border-radius: 15px;
+      font-size: 14px;
     }
   }
